test/corpus/blocks.txt
=========================
Strict graph
=========================

strict graph {
  a -- b
}

---

(source_file
  (keyword)
  (keyword)
  block: (block
    (stmt_list
      (edge_stmt
        (node_id
          (id
            (identifier)))
        (edgeop)
        (node_id
          (id
            (identifier)))))))

=========================
Strict digraph
=========================

strict digraph {
  a -> b
}

---

(source_file
  (keyword)
  (keyword)
  block: (block
    (stmt_list
      (edge_stmt
        (node_id
          (id
            (identifier)))
        (edgeop)
        (node_id
          (id
            (identifier)))))))

=========================
Case insensitive keywords
=========================

StRiCt grAPH {
  subgrAPH { }
  gRaph []
  noDE []
  EDGE []
}

---

(source_file
  (keyword)
  (keyword)
  block: (block
    (stmt_list
      (subgraph
        (keyword)
        block: (block))
      (attr_stmt
        (keyword)
        (attr_list))
      (attr_stmt
        (keyword)
        (attr_list))
      (attr_stmt
        (keyword)
        (attr_list)))))

=========================
Nested subgraphs
=========================

graph {
  subgraph {
    subgraph {
      { { a -- b } }
    }
  }
}

---

(source_file
  (keyword)
  block: (block
    (stmt_list
      (subgraph
        (keyword)
        block: (block
          (stmt_list
            (subgraph
              (keyword)
              block: (block
                (stmt_list
                  (subgraph
                    block: (block
                      (stmt_list
                        (subgraph
                          block: (block
                            (stmt_list
                              (edge_stmt
                                (node_id
                                  (id
                                    (identifier)))
                                (edgeop)
                                (node_id
                                  (id
                                    (identifier)))))))))))))))))))
